gitops-factory/namespaces/analytics-svc/shared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: analytics-svc
  labels:
    app.kubernetes.io/name: default-deny-all
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"redacted"}'
  uid: 930864e4-d311-4cdd-8df5-b95f4debafe2
  resourceVersion: '3013368'
  generation: 12
  creationTimestamp: '2025-10-07T08:11:30Z'
  managedFields:
  - manager: kubectl-client-side-apply
    operation: Update
    apiVersion: v1
    time: '2025-10-07T08:11:30Z'
    fieldsType: FieldsV1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
